<resources>
    <string name="app_name">Airdesk</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Airkdesk</string>
    <string name="title_activity_register">Register account</string>
    <string name="title_activity_user_settings_activity">User account</string>
    <string name="title_activity_work_spaces">Workspaces</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="title_activity_new_workspace">NewWorkspaceActivity</string>
    <string name="settings">Setttings</string>
    <!-- new workspace activity -->
    <string name="list_of_peers">List of Peers</string>
    <string name="new_workspace_title">Create New Workspace</string>
    <string name="new_file_title">Create New File</string>
    <string name="workspace_name_input">Workspace Name...</string>
    <string name="title_activity_my_work_spaces">My WorkSpaces</string>
    <string name="title_activity_foreign_workspaces">Foreign Workspaces</string>
    <string name="new_workspace_quota">Quota</string>
    <string name="input_workspace">Workspace Name</string>
    <string name="title_all_peers">List of users</string>

    <!-- menu options -->
    <string name="action_settings">My account</string>
    <string name="menu_new_workspace">New Workspace</string>
    <string name="menu_subscribe">Subscribe</string>
    <string name="menu_new_file">New file</string>

    <!-- subscribe dialog-->
    <string name="subscribe_title">Subscribe</string>
    <string name="subscribe_query">Search...</string>

    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="title_invite_dialog">Invite User</string>
    <string name="invite_dialog_email">user email</string>

    <string name="title_ws_remove_dialog">Remove Workspace</string>
    <string name="title_activity_workspace_settings">WorkspaceSettings</string>
    <string name="title_activity_list_files">ListFilesActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="last_warning">Are you sure?</string>
    <string name="title_activity_network">NetworkActivity</string>
</resources>
