<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.ulisboa.tecnico.cmov.airdesk_cmov.Activities.MyWorkSpacesActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/new_workspace" android:title="@string/menu_new_workspace"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/foreign" android:title="@string/title_activity_foreign_workspaces"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/list_peers" android:title="@string/list_of_peers"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
